kube-files/app-api-apache.yml
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  selector:
    app: apache
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
spec:
  selector:
    matchLabels:
      app: apache
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: apache
        tier: backend
        track: stable
    spec:
      containers:
        - name: apache
          image: rinilrn/php-apache:latest
          ports:
            - name: http
              containerPort: 80
