kube-files/app-sidecar-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  selector:
    app: proxy
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
spec:
  selector:
    matchLabels:
      app: proxy
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: proxy
        tier: backend
        track: stable
    spec:
      containers:
        - name: proxy
          image: rinilrn/nginx-rinil:latest
          ports:
            - name: http
              containerPort: 80
